unpackaged/main/default/objects/NF_Skills_Summary__c/NF_Skills_Summary__c.object-meta.xml
<CustomObject>
    <label>Skills Summary</label>
    <nameField>
        <displayFormat>SS-{00000}</displayFormat>
        <label>Skills Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>