unpackaged/main/default/objects/NF_Skills_Summary__c/fields/AbandonCount__c.field-meta.xml
<CustomField>
    <fullName>AbandonCount__c</fullName>
    <label>AbandonCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>