unpackaged/main/default/objects/NF_Skills_Summary__c/fields/AbandonRate__c.field-meta.xml
<CustomField>
    <fullName>AbandonRate__c</fullName>
    <label>AbandonRate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>