unpackaged/main/default/objects/NF_Skills_Summary__c/fields/AgentsAcw__c.field-meta.xml
<CustomField>
    <fullName>AgentsAcw__c</fullName>
    <label>AgentsAcw</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>