unpackaged/main/default/objects/NF_Skills_Summary__c/fields/AgentsAvailable__c.field-meta.xml
<CustomField>
    <fullName>AgentsAvailable__c</fullName>
    <label>AgentsAvailable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>