unpackaged/main/default/objects/NF_Skills_Summary__c/fields/AgentsIdle__c.field-meta.xml
<CustomField>
    <fullName>AgentsIdle__c</fullName>
    <label>AgentsIdle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>