unpackaged/main/default/objects/NF_Skills_Summary__c/fields/AgentsLoggedIn__c.field-meta.xml
<CustomField>
    <fullName>AgentsLoggedIn__c</fullName>
    <label>AgentsLoggedIn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>