unpackaged/main/default/objects/NF_Skills_Summary__c/fields/AgentsUnavailable__c.field-meta.xml
<CustomField>
    <fullName>AgentsUnavailable__c</fullName>
    <label>AgentsUnavailable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>