unpackaged/main/default/objects/NF_Skills_Summary__c/fields/AgentsWorking__c.field-meta.xml
<CustomField>
    <fullName>AgentsWorking__c</fullName>
    <label>AgentsWorking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>