unpackaged/main/default/objects/NF_Skills_Summary__c/fields/AverageHandleTime__c.field-meta.xml
<CustomField>
    <fullName>AverageHandleTime__c</fullName>
    <label>AverageHandleTime</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>