unpackaged/main/default/objects/NF_Skills_Summary__c/fields/AverageInqueueTime__c.field-meta.xml
<CustomField>
    <fullName>AverageInqueueTime__c</fullName>
    <label>AverageInqueueTime</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>