unpackaged/main/default/objects/NF_Skills_Summary__c/fields/AverageSpeedToAnswer__c.field-meta.xml
<CustomField>
    <fullName>AverageSpeedToAnswer__c</fullName>
    <label>AverageSpeedToAnswer</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>