unpackaged/main/default/objects/NF_Skills_Summary__c/fields/AverageTalkTime__c.field-meta.xml
<CustomField>
    <fullName>AverageTalkTime__c</fullName>
    <label>AverageTalkTime</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>