unpackaged/main/default/objects/NF_Skills_Summary__c/fields/AverageWrapTime__c.field-meta.xml
<CustomField>
    <fullName>AverageWrapTime__c</fullName>
    <label>AverageWrapTime</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>