unpackaged/main/default/objects/NF_Skills_Summary__c/fields/BusinessUnitName__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitName__c</fullName>
    <label>BusinessUnitName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>