unpackaged/main/default/objects/NF_Skills_Summary__c/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <label>CampaignId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>