unpackaged/main/default/objects/NF_Skills_Summary__c/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <label>CampaignName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>