unpackaged/main/default/objects/NF_Skills_Summary__c/fields/ConnectsAHT__c.field-meta.xml
<CustomField>
    <fullName>ConnectsAHT__c</fullName>
    <label>ConnectsAHT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>