unpackaged/main/default/objects/NF_Skills_Summary__c/fields/ContactsActive__c.field-meta.xml
<CustomField>
    <fullName>ContactsActive__c</fullName>
    <label>ContactsActive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>