unpackaged/main/default/objects/NF_Skills_Summary__c/fields/ContactsHandled__c.field-meta.xml
<CustomField>
    <fullName>ContactsHandled__c</fullName>
    <label>ContactsHandled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>