unpackaged/main/default/objects/NF_Skills_Summary__c/fields/ContactsOffered__c.field-meta.xml
<CustomField>
    <fullName>ContactsOffered__c</fullName>
    <label>ContactsOffered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>