unpackaged/main/default/objects/NF_Skills_Summary__c/fields/ContactsQueued__c.field-meta.xml
<CustomField>
    <fullName>ContactsQueued__c</fullName>
    <label>ContactsQueued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>