unpackaged/main/default/objects/NF_Skills_Summary__c/fields/ContactsWithinSLA__c.field-meta.xml
<CustomField>
    <fullName>ContactsWithinSLA__c</fullName>
    <label>ContactsWithinSLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>