unpackaged/main/default/objects/NF_Skills_Summary__c/fields/Dials__c.field-meta.xml
<CustomField>
    <fullName>Dials__c</fullName>
    <label>Dials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>