unpackaged/main/default/objects/NF_Skills_Summary__c/fields/HoldTime__c.field-meta.xml
<CustomField>
    <fullName>HoldTime__c</fullName>
    <label>HoldTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>