unpackaged/main/default/objects/NF_Skills_Summary__c/fields/IsOutbound__c.field-meta.xml
<CustomField>
    <fullName>IsOutbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOutbound</label>
    <type>Checkbox</type>
</CustomField>