unpackaged/main/default/objects/NF_Skills_Summary__c/fields/LongestQueueDur__c.field-meta.xml
<CustomField>
    <fullName>LongestQueueDur__c</fullName>
    <label>LongestQueueDur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>