unpackaged/main/default/objects/NF_Skills_Summary__c/fields/MediaTypeId__c.field-meta.xml
<CustomField>
    <fullName>MediaTypeId__c</fullName>
    <label>MediaTypeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>