unpackaged/main/default/objects/NF_Skills_Summary__c/fields/MediaTypeName__c.field-meta.xml
<CustomField>
    <fullName>MediaTypeName__c</fullName>
    <label>MediaTypeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>