unpackaged/main/default/objects/NF_Skills_Summary__c/fields/QueueCount__c.field-meta.xml
<CustomField>
    <fullName>QueueCount__c</fullName>
    <label>QueueCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>