unpackaged/main/default/objects/NF_Skills_Summary__c/fields/RightPartyConnects__c.field-meta.xml
<CustomField>
    <fullName>RightPartyConnects__c</fullName>
    <label>RightPartyConnects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>