unpackaged/main/default/objects/NF_Skills_Summary__c/fields/RightPartyConnectsAHT__c.field-meta.xml
<CustomField>
    <fullName>RightPartyConnectsAHT__c</fullName>
    <label>RightPartyConnectsAHT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>