unpackaged/main/default/objects/NF_Skills_Summary__c/fields/ServiceLevelGoal__c.field-meta.xml
<CustomField>
    <fullName>ServiceLevelGoal__c</fullName>
    <label>ServiceLevelGoal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>