unpackaged/main/default/objects/NF_Skills_Summary__c/fields/ServiceLevelThreshold__c.field-meta.xml
<CustomField>
    <fullName>ServiceLevelThreshold__c</fullName>
    <label>ServiceLevelThreshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>