unpackaged/main/default/objects/NF_Skills_Summary__c/fields/SkillName__c.field-meta.xml
<CustomField>
    <fullName>SkillName__c</fullName>
    <label>SkillName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>