unpackaged/main/default/objects/NF_Skills_Summary__c/fields/TotalContactTime__c.field-meta.xml
<CustomField>
    <fullName>TotalContactTime__c</fullName>
    <label>TotalContactTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>