unpackaged/main/default/objects/NF_Skills_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BusinessUnitId__c</columns>
    <columns>BusinessUnitName__c</columns>
    <columns>AbandonCount__c</columns>
    <columns>AbandonRate__c</columns>
    <columns>AgentsAcw__c</columns>
    <columns>AgentsAvailable__c</columns>
    <columns>AgentsIdle__c</columns>
    <columns>AgentsLoggedIn__c</columns>
    <columns>AgentsUnavailable__c</columns>
    <columns>AgentsWorking__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>